--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -22,7 +22,7 @@ body {
 
 h1 {
     font-family: "Josefin Sans", sans-serif;
-    font-size: 40px;
+    font-size: 2rem;
     letter-spacing: 1.2em;
     text-shadow: 5px 5px 2px yellow;
     border-bottom: 3px solid rgb(115, 115, 114);
