--- a/kadai_018/style.css
+++ b/kadai_018/style.css
@@ -55,33 +55,33 @@
     width: 800px;
     height: 300px;
     background-color: #87ceeb;
-    margin: 20px auto;
-
     position: relative;
+    margin: 0 auto;
 }
 
-
-#bottom-child01,
-#bottom-child02,
-#bottom-child03 {
+#bottom-child01 {
     width: 400px;
     height: 100px;
     background-color: #e5dcf0;
     position: absolute;
-
+    top: 0;
     left: 0;
 }
 
-#bottom-child01 {
-    top: 0;
-}
-
 #bottom-child02 {
+    width: 400px;
+    height: 100px;
+    background-color: #e5dcf0;
+    position: absolute;
     top: 100px;
     left: 200px;
 }
 
 #bottom-child03 {
+    width: 400px;
+    height: 100px;
+    background-color: #e5dcf0;
+    position: absolute;
     top: 200px;
     left: 400px;
 }
