--- a/kadai_018/style.css
+++ b/kadai_018/style.css
@@ -59,29 +59,19 @@
     margin: 0 auto;
 }
 
-#bottom-child01 {
+#bottom div {
     width: 400px;
     height: 100px;
     background-color: #e5dcf0;
-    position: absolute;
-    top: 0;
-    left: 0;
+
 }
 
 #bottom-child02 {
-    width: 400px;
-    height: 100px;
-    background-color: #e5dcf0;
-    position: absolute;
-    top: 100px;
+    position: relative;
     left: 200px;
 }
 
 #bottom-child03 {
-    width: 400px;
-    height: 100px;
-    background-color: #e5dcf0;
-    position: absolute;
-    top: 200px;
+    position: relative;
     left: 400px;
 }
